Ahora todas las operaciones de codificación y descodificación de Base64 se hacen con la clase del núcleo
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/trunk/project@1912 dcdbb401-323c-49cf-88a0-803402807c85